Version 1.3 (The uncertain future):

- Feature: It is now possible to dump the content of a SWF file to stdout by
           doing 'dissector.jar -dump <input file>'.
- Feature: It is now possible to decompress SWF files by doing
           'dissector.jar -decompress <input file> -o <output file>'.
- Feature: Function bodies defined by the ActionScript 2 functions
           DefineFunction and DefineFunction2 are now aligned better in the
	   GUI to improve readability of the code.
- Feature: Individual elements of a SWF file can now be dumped to a new file
           by right-clicking on the elements in the main tree of the GUI.
- Bugfix: Fixed a bug in the Minimizer that prevented it from working with
          compressed SWF files.

Version 1.2 (June 5th 2011):

- Feature: Made parsing of files more robust. This became necessary after the
           recent spike in obfuscated ActionScript code malware.
- Feature: Unknown ActionScript 2 instructions are now shown in the GUI with
           their action code.
- Feature: In ActionScript 2 code, the jump target of ActionIf instructions
           shown in the GUI is now the adjusted address instead of the raw
	   relative address. This makes it easier for the user to find out
	   where a jump is going.
- Feature: In ActionScript 2 code, the jump target of ActionJump instructions
           shown in the GUI is now the adjusted address instead of the raw
	   relative address. This makes it easier for the user to find out
	   where a jump is going.
- Feature: Strings defined in ActionScript 2 ConstantPool actions are now
           surrounded by quotes to make them more readable.
- Feature: When ActionScript 2 code is shown in the GUI, registers pushed
           by ActionPush are now easily distinguished from pushed integers.
- Feature: When ActionScript 2 code is shown in the GUI, constants pushed
           by ActionPush are now easily distinguished from pushed integers.